[package]
name = "pathmaker"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hyper"]

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
failure = "0.1.6"
percent-encoding = "2.1.0"
hyper = { version = "*", optional = true }
futures = { version = "*", optional = true }