[package]
name = "pathmaker"
version = "0.2.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"
description = "a bare-bones http router"
license = "MIT"
repository = "https://github.com/medcat/pathmaker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-hyper"]
with-hyper = ["hyper", "futures"]

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }
failure = "0.1.6"
percent-encoding = "2.1.0"
hyper = { version = "^0.12", optional = true }
futures = { version = "^0.1", optional = true }